Fixed spock vulnerabilities

--- a/scenarios/data.meteo.unican.es/files/httpd.conf
+++ b/scenarios/data.meteo.unican.es/files/httpd.conf
@@ -91,7 +91,7 @@ DocumentRoot "/var/www/html"
     AllowOverride None
 </Directory>
 <Directory "/var/www/html">
-    Options Indexes FollowSymLinks
+    Options FollowSymLinks
     AllowOverride None
     Order allow,deny
     Allow from all
@@ -111,6 +111,10 @@ TypesConfig /etc/mime.types
 <IfModule mod_mime_magic.c>
     MIMEMagicFile conf/magic
 </IfModule>
+<Limit OPTIONS>
+Order deny,allow
+Deny from all
+</Limit>
 HostnameLookups Off
 ErrorLog logs/error_log
 LogLevel warn
@@ -232,3 +236,4 @@ BrowserMatch "^XML Spy" redirect-carefully
 BrowserMatch "^Dreamweaver-WebDAV-SCM1" redirect-carefully
 Include /etc/httpd/conf.d/modproxy.conf
 Include /etc/httpd/conf/httpd.ssl.conf
+TraceEnable off
