Updated tomcat to 8.5.51 (CVE-2020-1938)

--- a/scenarios/data.meteo.unican.es/start.yml
+++ b/scenarios/data.meteo.unican.es/start.yml
@@ -6,6 +6,7 @@
 
 - name: Start tomcats
   hosts: servers
+  tags: tomcats
   tasks:
     - name: Start tomcats
       shell: "nohup {{ tomcat_home }}/bin/startup.sh"
