--- a/scenarios/data.meteo.unican.es/stop.yml
+++ b/scenarios/data.meteo.unican.es/stop.yml
@@ -6,6 +6,7 @@
 
 - name: Stop tomcats
   hosts: servers
+  tags: tomcats
   tasks:
     - name: Import stop tasks
       import_tasks: stop/tomcats.yml
